[FIX] strong tag dark mode text color change

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@
   @apply text-lg font-bold text-gray-900;
 }
 .markdown_styles {
-  @apply prose max-w-none prose-p:m-0 prose-figcaption:text-center prose-code:before:content-none prose-code:after:content-none prose-img:m-0 dark:text-[#c9d1d9] prose-headings:dark:text-[#c9d1d9] prose-a:dark:text-[#c9d1d9] prose-blockquote:dark:text-[#c9d1d9] prose-figcaption:dark:text-[#c9d1d9] prose-strong:dark:text-[#c9d1d9] prose-li:marker:dark:text-[#c9d1d9];
+  @apply prose max-w-none prose-p:m-0 prose-figcaption:text-center prose-code:before:content-none prose-code:after:content-none prose-img:m-0 dark:text-[#c9d1d9] prose-headings:dark:text-[#c9d1d9] prose-a:dark:text-[#c9d1d9] prose-blockquote:dark:text-[#c9d1d9] prose-figcaption:dark:text-[#c9d1d9] prose-strong:dark:text-[#656b74] prose-li:marker:dark:text-[#c9d1d9];
 }
 
 .nav_menu {
